# gmail_agent

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  SECURITY.md  app.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  services.py  test.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  docs.yml  security.yml  tests.yml
gmail-test/: HIGH_SCORE_REPORT.md  README.md  pyproject.toml  requirements.txt
gmail-test/.github/workflows/: ci.yml
gmail-test/src/: __init__.py  analytics.py  api_gateway.py  app.py  auth.py  config.py  middleware.py  monitoring.py  notifications.py  plugins.py  scheduler.py  storage.py  utils_helpers.py  validation.py
gmail-test/src/api/: routes.py
gmail-test/src/core/: email_processor.py  gmail_client.py
gmail-test/src/models/: email.py
gmail-test/src/services/: filter_service.py  template_service.py
gmail-test/src/utils/: helpers.py
gmail-test/tests/: conftest.py
gmail-test/tests/integration/: test_integration.py
gmail-test/tests/unit/: test_analytics.py  test_api.py  test_api_gateway.py  test_app.py  test_auth.py  test_config.py  test_email_models.py  test_email_processor.py  test_events.py  test_filters_templates.py  test_gmail_client.py  test_middleware.py  test_monitoring.py  test_notifications.py  test_plugins.py  test_scheduler.py  test_storage.py  test_utils.py  test_utils_helpers.py  test_validation.py
high_score_version/: README.md
high_score_version/.github/workflows/: ci.yml  quality.yml  release.yml
high_score_version/src/: events.py
high_score_version/tests/unit/: test_database.py
